@@ -3,9 +3,10 @@
     <Information>
         <Name>Muzzle</Name>
         <Author>Git-Forked</Author>
-        <Version>1.0.0</Version>
+        <Version>1.1.0</Version>
         <Description>Muzzle trolls, spam, and keywords.</Description>
         <Image>Gitforked/Muzzle/Resources/Muzzle.tga</Image>
     </Information>
     <Package>GitForked.Muzzle.Main</Package>
+    <Configuration Apartment="Muzzle" />
 </Plugin>
