@@ -5,6 +5,7 @@
 
 Muzzle = {
 	'/',
+	'Aclandia',
 	'Acornish',
 	'Adanidir',
 	'Adinonzl',
@@ -13,6 +14,7 @@ Muzzle = {
 	'Aenglas',
 	'Akillezee',
 	'Akonivess',
+	'Alectrona',
 	'Alectronia',
 	'Alengwen',
 	'Aleriadh',
@@ -23,6 +25,7 @@ Muzzle = {
 	'Alwaysfadingecho',
 	'Amlindor',
 	'Andricorn',
+	'Angardir',
 	'Anklebyter',
 	'Annihilation',
 	'Anorgalen',
@@ -85,6 +88,7 @@ Muzzle = {
 	'Berrazul',
 	'bez',
 	'Bez',
+	'Bilskirnir',
 	'Birsa',
 	'Blackrabbitking',
 	'Blerpolas',
@@ -104,6 +108,7 @@ Muzzle = {
 	'Brordon',
 	'Bruenyn',
 	'Bryetwulf',
+	'Brynnwyn',
 	'Bunnydemon',
 	'Bwalon',
 	'Cairwen',
@@ -112,6 +117,7 @@ Muzzle = {
 	'Calililda',
 	'Callevir',
 	'Cantheriel',
+	'Captainsparrow',
 	'Carianor',
 	'Catallaxy',
 	'Cathonriel',
@@ -135,6 +141,8 @@ Muzzle = {
 	'Clawrond',
 	'Clemie',
 	'Compassionate',
+	'Corvusignis',
+	'Corvusterrae',
 	'Craadro',
 	'Crabwarth',
 	'Crazy',
@@ -154,9 +162,11 @@ Muzzle = {
 	'Dalongar',
 	'Darduipher',
 	'Darwarz',
+	'Dazeydukes',
 	'Death',
 	'Deathmetalrabbit',
 	'Decimater',
+	'Decoy',
 	'Delhad',
 	'Delyssia',
 	'Demiors',
@@ -185,6 +195,7 @@ Muzzle = {
 	'Dyin',
 	'Eadrithe',
 	'Earlindk',
+	'Earlindun',
 	'Earthanor',
 	'Ecathil',
 	'Edenfiel',
@@ -206,6 +217,7 @@ Muzzle = {
 	'Elthiram',
 	'Eltiner',
 	'Elunis',
+	'Elvenraen',
 	'Elwys',
 	'Elyviel',
 	'Emillina',
@@ -223,6 +235,7 @@ Muzzle = {
 	'Eyal',
 	'Eyogentandre',
 	'Faefnir',
+	'Fairaday',
 	'Fairewind',
 	'Faithfull',
 	'Faithie',
@@ -256,6 +269,7 @@ Muzzle = {
 	'Fyrno',
 	'Gaelerian',
 	'Gairabor',
+	'Gairbo',
 	'Gaisras',
 	'Gakomir',
 	'Galabrandt',
@@ -303,6 +317,7 @@ Muzzle = {
 	'Handegorn',
 	'Handiofair',
 	'Hangermar',
+	'Hanomag',
 	'Haoleboy',
 	'Hardanna',
 	'Hardfist',
@@ -328,6 +343,7 @@ Muzzle = {
 	'Horyu',
 	'Hullaras',
 	'Humanchampion',
+	'Hunteringngathering',
 	'Hunterngather',
 	'Hyanisse',
 	'Hyssjostanob',
@@ -343,6 +359,7 @@ Muzzle = {
 	'Improvisation',
 	'Inittowinit',
 	'Inlerah',
+	'Iorthomund',
 	'Iowedhir',
 	'Irohmako',
 	'Isenshire',
@@ -411,20 +428,25 @@ Muzzle = {
 	'Legolambchops',
 	'Lengethmorn',
 	'LF',
+	'Liannanor',
 	'Lillas',
 	'Limelemon',
 	'Linchino',
 	'Lindahad',
+	'Linfador',
 	'Linkinlog',
 	'Linnon',
 	'Linthanel',
 	'Lisandir',
 	'Littlewhitedove',
 	'Liuin',
+	'Logansan',
 	'Lokea',
 	'Lonekk',
 	'Longpig',
 	'Lordevileyes',
+	'Loremandy',
+	'Lorithemouse',
 	'Lorossi',
 	'Lorrek',
 	'Loss',
@@ -446,6 +468,7 @@ Muzzle = {
 	'Malastel',
 	'Malcolm',
 	'Malhaldor',
+	'Malistor',
 	'Malvegold',
 	'Malythorr',
 	'Mameren',
@@ -463,6 +486,7 @@ Muzzle = {
 	'May',
 	'Mcgavan',
 	'Medumam',
+	'Meisie',
 	'Mel',
 	'Menglindril',
 	'Mereliss',
@@ -493,6 +517,7 @@ Muzzle = {
 	'Nahtazu',
 	'Nanduinuir',
 	'Naneldel',
+	'Naradis',
 	'Naradoc',
 	'Narangren',
 	'Naranthor',
@@ -601,6 +626,7 @@ Muzzle = {
 	'Rugad',
 	'Runkhulruk',
 	'Ruthadan',
+	'Ryeanne',
 	'Rytharius',
 	'Saarthronah',
 	'Saashay',
@@ -659,6 +685,7 @@ Muzzle = {
 	'Squishyelfthing',
 	'Stannlas',
 	'Starrili',
+	'Starsaber',
 	'Steathstinger',
 	'Stickcaster',
 	'Stoneformbis',
@@ -790,6 +817,7 @@ Muzzle = {
 	'Vethelion',
 	'Vilette',
 	'Villo',
+	'Voknur',
 	'Voruuk',
 	'Waatwan',
 	'Wato',
