@@ -1,0 +1,12 @@
+<?xml version="1.0"?>
+<Plugin>
+	<Information>
+		<Name>Muzzle Reload</Name>
+		<Author>Git-Forked</Author>
+		<Version>1.0.0</Version>
+		<Description>This plugin is used internally by Muzzle and should NOT be loaded by the user or plugin manager.</Description>
+		<Image>Gitforked/Muzzle/Resources/x.tga</Image>
+	</Information>
+	<Package>GitForked.Muzzle.Reload</Package>
+	<Configuration Apartment="MuzzleReload" />
+</Plugin>
